--- a/cmd/ghloc/server_static/index.html
+++ b/cmd/ghloc/server_static/index.html
@@ -2,12 +2,13 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
+		<link rel="icon" href="/assets/favicon.37c0d6c2.svg" type="image/svg+xml" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>ghloc-cli</title>
-		<script type="module" crossorigin src="/assets/index.96dd7745.js"></script>
-		<link rel="stylesheet" href="/assets/index.bb29bdd4.css">
+		<script type="module" crossorigin src="/assets/index.0224d36f.js"></script>
+		<link rel="stylesheet" href="/assets/index.076f3e8e.css">
 	</head>
-	<body>
+	<body class="dark:bg-[#181a1b] dark:text-gray-200">
 		<div id="app"></div>
 		
 	</body>
